# include_display_mode_tex

./: Cargo.toml  DESIGN.md  README.md
.github/workflows/: rust.yml
src/: args.rs  lib.rs
src/html/: docs-header.html
src/tex/: example.tex
